--- a/elk/elasticsearch.yml
+++ b/elk/elasticsearch.yml
@@ -15,29 +15,31 @@ spec:
     spec:
       containers:
       - name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.5.1
         resources:
           requests:
-            memory: "800Mi"
+            memory: "900Mi"
             cpu: "100m"
           limits:
-            memory: "900Mi"
+            memory: "1024Mi"
             cpu: "500m"
         env:
         - name: discovery.type
           value: single-node
+        - name: "ES_JAVA_OPTS"
+          value: "-Xms500m -Xmx600m"
         ports:
         - containerPort: 9200
           name: client
         - containerPort: 9300
           name: nodes
         volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+        - name: elasticsearch-persistent-storage
+          mountPath: /usr/share/elasticsearch/data
       volumes:
-      - name: mysql-persistent-storage
+      - name: elasticsearch-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pv-claim
+          claimName: elasticsearch-pv-claim
 ---
 apiVersion: v1
 kind: Service
