--- a/elk/kibana.yml
+++ b/elk/kibana.yml
@@ -16,7 +16,12 @@ spec:
     spec:
       containers:
       - name: kibana
-        image: docker.elastic.co/kibana/kibana:6.8.6
+        image: docker.elastic.co/kibana/kibana:7.5.1
+        env:
+        - name: ELASTICSEARCH_URL
+          value: http://elasticsearch:9200
+        - name: XPACK_SECURITY_ENABLED
+          value: "true"
         ports:
         - containerPort: 5601
           name: webinterface
