--- a/rbac.yml
+++ b/rbac.yml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: hello
+  name: service-reader
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources: ["services", "pods", "endpoints", "namespaces", "configmaps", "secrets"]
@@ -11,11 +11,11 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: hello
+  name: service-reader
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: hello
+  name: service-reader
 subjects:
 - kind: ServiceAccount
   name: defaul
